# BaicalGuiServer

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
icons/: icons.qrc
includes/: .ui  GTypes.h  PCRC32.h  Trace.cpp  Trace.h  chunkhandler.cpp  chunkhandler.h  confighandler.cpp  confighandler.h  connectiontimeoutchecker.cpp  connectiontimeoutchecker.h  debuglogger.cpp  debuglogger.h  enumparser.cpp  enumparser.h  filereader.cpp  filereader.h  launcher.cpp  launcher.h  packethandler.cpp  packethandler.h  serverstatussender.cpp  serverstatussender.h  tracebackupwriter.cpp  tracebackupwriter.h  tracerowslist.cpp  tracerowslist.h  tracestotxt.cpp  tracestotxt.h  tracewindow.cpp  tracewindow.h  tracewindow.ui  utility.h
includes/FileReader/: filechunkshandler.cpp  filechunkshandler.h  filereader.cpp  filereader.h
includes/TraceWindow/: tracerowslist_copy.cpp  tracerowslist_copy.h  tracerowslist_copy.ui  tracewindow.cpp  tracewindow.h  tracewindow.ui  tracewindowsettings.cpp  tracewindowsettings.h  tracewindowsettings.ui
